2020-04-11
Init repo. Based on the A. Lomax distribution
http://alomax.free.fr/nlloc/softbeta/tar/NLLbeta_src.tgz of 2018-12-06.